--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,20 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/final_db
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: 2510
 
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database: postgresql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        format_sql: true
+        types.print.banner: false
+    open-in-view: false
+server:
+  port: 8080
